# rag_studio

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/: answer.py  chunking.py  config.py  embeddings.py  file_manager.py  ingestion.py  loaders.py  prompts.py  retrieval.py
